// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberInput /> should have some hintText 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        id="id"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
  <p
    class="root sizeScale2 alignLeft hintText"
  >
    hint text
  </p>
</div>
`;

exports[`<NumberInput /> should match snapshot 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        id="id"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when active 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase notchedBaseActive"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="root input-class invalid withStatus"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched and valid 1`] = `
<div
  class="root input-class valid withStatus"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with both icons 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase prefixed suffixed"
  >
    <div
      class="inputWrapper"
    >
      <label>
        <i
          class="root prefixIcon"
          style="width: 24px; height: 24px;"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </label>
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
      <label>
        <i
          class="root suffixIcon"
          style="width: 24px; height: 24px;"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </label>
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with prefix icon 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase prefixed"
  >
    <div
      class="inputWrapper"
    >
      <label>
        <i
          class="root prefixIcon"
          style="width: 24px; height: 24px;"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </label>
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with suffix icon 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase suffixed"
  >
    <div
      class="inputWrapper"
    >
      <input
        autocomplete="off"
        class="input"
        type="number"
        value=""
      />
      <label>
        <i
          class="root suffixIcon"
          style="width: 24px; height: 24px;"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </label>
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;
